<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    tools:context="org.bts.android.guidesignhomework.MainActivity"
    android:background="@color/colorBack">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:id="@+id/linearLayout">

        <Space
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1" />

        <ImageView
            app:srcCompat="@drawable/frontprofile"
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <ImageView
            android:layout_width="120dp"
            app:srcCompat="@drawable/sideprofile"
            android:id="@+id/imageView6"
            android:layout_height="120dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">


        <TextView
            android:text="@string/passport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="50px"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="40px"
            android:textColor="#ffffff"
            android:gravity="left"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/editText"
            android:layout_above="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Surname"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/editText"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="40px"
            android:textColor="#ffffff"
            android:gravity="left"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toStartOf="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nationality"
            android:ems="10"
            android:background="#ffffff"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:id="@+id/editText3"
            android:layout_alignBottom="@+id/checkBox"
            android:layout_toStartOf="@+id/checkBox" />

        <CheckBox
            android:text="@string/uecitizen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:id="@+id/checkBox"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</RelativeLayout>
